<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              tools:context="xavier.jorda.cat.recipe.detailsRecipe.StepDetailsFragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="11">

    <TextView
        android:id="@+id/stepNum_StepDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:foregroundGravity="center_vertical"
        android:gravity="center_vertical|center_horizontal"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/stepInfo_StepDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold|italic"/>

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_weight="4">

    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

    <ImageView
        android:id="@+id/step_thumbNailURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/RecipePicture_Desc"
        android:src="@drawable/ic_launcher"
        android:scaleType="centerCrop"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/description_StepDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="5dp"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/prevBtn_StepDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/prev"/>

        <Button
            android:id="@+id/nextBtn_StepDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/next"/>
    </LinearLayout>

</LinearLayout>
