<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="8dp"
    android:layout_marginBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/rectangle">

        <TextView
            android:id="@+id/ing_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/ingredient"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold|italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ing_measure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingTop="2dp"
                android:text="@string/measure"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ing_measure_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingTop="2dp"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ing_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingTop="2dp"
                android:text="@string/quantity"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ing_quantity_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:paddingTop="2dp"
                android:text=""
                android:textAlignment="textStart"
                android:textSize="13sp"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>